@@ -26,6 +26,7 @@ Application Changes:
 - Armor mods and gear that come included with an item can no longer be unequipped independently of said item.
 - Ammunition loaded into a weapon is now forced to be equipped and cannot be unequipped.
 - The right-click menu where users can rename custom items during character creation is now available again.
+- Added a minor quality-of-life feature where changing the PDF application of Chummer can also cause the PDF parameters setting to automatically update itself to match the selected application.
 
 Data Changes:
 - Added bonus nodes for Shooter (The Soldier) paragon's Compiling dice pool penalty and +1 limit for attack actions. Fixes #4935.
